# docs/responsesSpec.go
@@ -1,0 +1,11 @@
+package swagger
+
+//invalid json or get parameters
+//swagger:response badrequest
+type BadRequestWrap struct {
+}
+
+//data doesn't exist
+//swagger:response notfound
+type NotFoundWrap struct {
+}
