# internal/app/booking/delivery/http/bookingDelivery.go
@@ -25,12 +25,16 @@ type BookingHandler struct {
 func NewBookingHandler(r *mux.Router, usecase booking.Usecase, log *logger.CustomLogger) *BookingHandler {
 	handler := BookingHandler{bookingUsecase: usecase, log: log}
 
-	r.HandleFunc("/booking/create", handler.AddBooking).Methods("POST")
-	r.Path("/booking/list").Queries("room_id", "{room_id:[0-9]+}").HandlerFunc(handler.GetBookings).Methods("GET")
-	r.Path("/booking/delete").Queries("booking_id", "{booking_id:[0-9]+}").HandlerFunc(handler.DeleteBooking).Methods("DELETE")
+	r.HandleFunc("/bookings/create", handler.AddBooking).Methods("POST")
+	r.Path("/bookings/list").Queries("room_id", "{room_id:[0-9]+}").HandlerFunc(handler.GetBookings).Methods("GET")
+	r.Path("/bookings/delete").Queries("booking_id", "{booking_id:[0-9]+}").HandlerFunc(handler.DeleteBooking).Methods("DELETE")
 	return &handler
 }
 
+// swagger:route POST /bookings/create bookings AddBooking
+// responses:
+//  201: bookingID
+//  400: badrequest
 func (rh *BookingHandler) AddBooking(w http.ResponseWriter, r *http.Request) {
 	bookingAdd := bookingModel.BookingAdd{}
 	err := easyjson.UnmarshalFromReader(r.Body, &bookingAdd)
@@ -47,9 +51,13 @@ func (rh *BookingHandler) AddBooking(w http.ResponseWriter, r *http.Request) {
 	responses.SendDataResponse(w, okCodes.CreateResponse, bookingID)
 }
 
+// swagger:route DELETE /bookings/delete bookings DeleteBooking
+// responses:
+//  400: badrequest
+//  404: notfound
 func (rh *BookingHandler) DeleteBooking(w http.ResponseWriter, r *http.Request) {
 	bookingIDVar := r.FormValue("booking_id")
-	bookingID, err := strconv.ParseInt(bookingIDVar, 10, 64)
+	bookingID, err := strconv.Atoi(bookingIDVar)
 	if err != nil {
 		customError.PostError(w, r, rh.log, err, clientError.BadRequest)
 		return
@@ -63,9 +71,14 @@ func (rh *BookingHandler) DeleteBooking(w http.ResponseWriter, r *http.Request) 
 	responses.SendOkResponse(w, okCodes.OkResponse)
 }
 
+// swagger:route GET /bookings/list bookings GetBookings
+// responses:
+//  200: bookings
+//  400: badrequest
+//  404: notfound
 func (rh *BookingHandler) GetBookings(w http.ResponseWriter, r *http.Request) {
 	roomIDVar := r.FormValue("room_id")
-	roomID, err := strconv.ParseInt(roomIDVar, 10, 64)
+	roomID, err := strconv.Atoi(roomIDVar)
 	if err != nil {
 		customError.PostError(w, r, rh.log, err, clientError.BadRequest)
 		return
